--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Página</title>
-    <link rel="stylesheet" type="text/css" href="projeto-bootstrap/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -17,10 +17,10 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Quem somos</a>
+                    <a class="nav-link" href="#quemsomos">Quem somos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Parceiros</a>
+                    <a class="nav-link" href="#parceiros">Parceiros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Serviços</a>
@@ -35,6 +35,27 @@
             </h3>
             <img src="imagens/people-redimencionada.jpg" alt="" class="rounded-circle" width="400px" height="400px">
             <h3>Somos um time comprometido com os resultados</h3>
+        </div>
+    </section>
+
+    <section id="parceiros">
+        <div class="container-fluid text-center margin parceiros">
+            <h3>
+                Parceiros
+            </h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="imagens/dio.png" alt="">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="imagens/dio.png" alt="">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="imagens/dio.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
