Finalizando atividade de bootstrap. algumas modificações foram adicionadas

--- a/index.html
+++ b/index.html
@@ -23,24 +23,43 @@
                     <a class="nav-link" href="#parceiros">Parceiros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Serviços</a>
+                    <a class="nav-link" href="#servicos">Serviços</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <section id="quemsomos"> 
-        <div class="container-fluid quem-somos text-center margin">
-            <h3 class="margin">
+    <section id="quemsomos">
+        <div class="container-fluid quem-somos text-justify margin">
+            <h3>
                 Quem somos
             </h3>
-            <img src="imagens/people-redimencionada.jpg" alt="" class="rounded-circle" width="400px" height="400px">
             <h3>Somos um time comprometido com os resultados</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad saepe blanditiis, fugit, qui nesciunt
+                dolorum perferendis tenetur vitae non consequatur odio cum ipsam fuga quae expedita, quia minus et
+                neque?
+            </p>
+            <p>
+
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos vitae nulla libero omnis accusamus
+                consequatur provident, laboriosam, eveniet sunt fugiat nemo vero molestias. Modi quia animi, nostrum
+                pariatur veniam quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ad nihil adipisci
+                obcaecati neque laudantium doloremque, nesciunt unde debitis harum facere vel voluptate voluptates? Quis
+                nisi cupiditate corporis eaque dicta!
+            </p>
+            <p>
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur earum possimus facilis deserunt,
+                qui illo harum nostrum cum, adipisci soluta, vitae aperiam? Minima iste repudiandae dolorem velit
+                reiciendis repellat alias?
+            </p>
+            <img src="imagens/people.jpg" alt="Quem somos" width="100%" class="img-qs">
         </div>
     </section>
 
     <section id="parceiros">
         <div class="container-fluid text-center margin parceiros">
-            <h3>
+            <h3 class="margin">
                 Parceiros
             </h3>
             <div class="container">
@@ -59,6 +78,38 @@
         </div>
     </section>
 
+    <section id="servicos">
+        <div class="container-fluid text-center margin servicos">
+            <h3 class="margin">
+                Serviços
+            </h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem soluta, aut vitae eaque
+                            quam nobis saepe fuga harum eos fugiat possimus, ipsa vel recusandae, optio culpa architecto
+                            obcaecati aliquam numquam.
+                        </p>
+                        <img src="imagens/app.jpg" alt="Imagem de celular com aplicativos" width="100%">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores excepturi aspernatur,
+                            dolore rem placeat eveniet laborum reprehenderit laboriosam quos molestiae a, facilis
+                            aliquam quaerat itaque, alias assumenda tempora nemo magni!
+                        </p>
+                        <img src="imagens/img2.jpg" alt="Imagem de uma área de trabalho" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="container-fluid text-center bg-footer margin">
+        <p>
+            Desenvolvido por Derlan Barros
+        </p>
+    </footer>
 </body>
 
 </html>
